@@ -12,7 +12,10 @@ import org.ost.advertisement.ui.utils.NotificationType;
 import org.ost.advertisement.ui.views.components.dialogs.ConfirmDeleteHelper;
 import org.ost.advertisement.ui.views.users.dialogs.UserEditDialog;
 import org.ost.advertisement.ui.views.users.query.elements.UserQueryStatusBar;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
@@ -23,9 +26,11 @@ import static org.ost.advertisement.constants.I18nKey.*;
 @UIScope
 public class UserView extends UserLayout {
 
+    private static final Logger log = LoggerFactory.getLogger(UserView.class);
+
     private final transient UserService userService;
     private final transient I18nService i18n;
-    private final transient UserQueryStatusBar queryStatusBar;
+    private final UserQueryStatusBar queryStatusBar;
 
     public UserView(UserQueryStatusBar queryStatusBar,
                     UserService userService,
@@ -36,25 +41,34 @@ public class UserView extends UserLayout {
         this.userService = userService;
         this.i18n = i18n;
 
-        getPaginationBar().setPageChangeListener(_ -> refreshGrid());
-
-        queryStatusBar.getQueryBlock().addEventListener(() -> {
-            getPaginationBar().setTotalCount(0);
-            refreshGrid();
-        });
-
-        UserGridConfigurator.configure(
-                getGrid(),
-                queryStatusBar.getQueryBlock(),
-                i18n,
-                u -> editDialogBuilder.buildAndOpen(u, this::refreshGrid),
-                this::confirmAndDelete
-        );
+        initPagination();
+        initQueryBar();
+        initGrid(editDialogBuilder);
 
         addComponentAsFirst(queryStatusBar);
         addComponentAtIndex(1, queryStatusBar.getQueryBlock());
 
         refreshGrid();
+    }
+
+    private void initPagination() {
+        getPaginationBar().setPageChangeListener(_ -> refreshGrid());
+    }
+
+    private void initQueryBar() {
+        queryStatusBar.getQueryBlock().addEventListener(() -> {
+            getPaginationBar().setTotalCount(0);
+            refreshGrid();
+        });
+    }
+
+    private void initGrid(UserEditDialog.Builder editDialogBuilder) {
+        UserGridConfigurator.configure(
+                getGrid(),
+                i18n,
+                u -> editDialogBuilder.buildAndOpen(u, this::refreshGrid),
+                this::confirmAndDelete
+        );
     }
 
     private void refreshGrid() {
@@ -68,14 +82,20 @@ public class UserView extends UserLayout {
             List<User> pageData = userService.getFiltered(currentFilter, page, size, sort);
             int totalCount = userService.count(currentFilter);
             getPaginationBar().setTotalCount(totalCount);
-            getGrid().setItems(pageData);
+            getGrid().setItems(pageData != null ? pageData : Collections.emptyList());
         } catch (ConstraintViolationException ex) {
+            log.warn("Validation error while fetching users: {}", ex.getMessage(), ex);
             showValidationErrors(ex);
-            getGrid().setItems(List.of());
+            getGrid().setItems(Collections.emptyList());
             getPaginationBar().setTotalCount(0);
+        } catch (Exception ex) {
+            log.error("Unexpected error while refreshing user grid", ex);
+            NotificationType.ERROR.show(i18n.get(USER_VIEW_NOTIFICATION_DELETE_ERROR, ex.getMessage()));
+            getGrid().setItems(Collections.emptyList());
+            getPaginationBar().setTotalCount(0);
+        } finally {
+            queryStatusBar.update();
         }
-
-        queryStatusBar.update();
     }
 
     private void confirmAndDelete(User user) {
@@ -90,6 +110,7 @@ public class UserView extends UserLayout {
                         NotificationType.SUCCESS.show(i18n.get(USER_VIEW_NOTIFICATION_DELETED));
                         refreshGrid();
                     } catch (Exception ex) {
+                        log.error("Error deleting user id={}", user.getId(), ex);
                         NotificationType.ERROR.show(
                                 i18n.get(USER_VIEW_NOTIFICATION_DELETE_ERROR, ex.getMessage())
                         );
@@ -109,4 +130,3 @@ public class UserView extends UserLayout {
         NotificationType.ERROR.show(i18n.get(USER_VIEW_NOTIFICATION_VALIDATION_FAILED) + "\n" + message);
     }
 }
-
